[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/SessionDetails.gd" type="Script" id=1]
[ext_resource path="res://scenes/pseudo/PseudoCardWrapped.tscn" type="PackedScene" id=2]
[ext_resource path="res://fonts/DefaultFontRes.tres" type="DynamicFont" id=3]

[node name="SessionDetails" type="ScrollContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 720.0
margin_bottom = 1268.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TimeDetails" parent="VBoxContainer" instance=ExtResource( 2 )]
editor/display_folded = true
anchor_right = 0.0
margin_right = 720.0

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/TimeDetails/PseudoCard" index="1"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 16.0
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/TimeDetails/PseudoCard/MarginContainer"]
margin_left = 8.0
margin_top = 8.0
margin_right = 696.0
margin_bottom = 136.0

[node name="Tanggal" type="Label" parent="VBoxContainer/TimeDetails/PseudoCard/MarginContainer/VBoxContainer"]
margin_right = 688.0
margin_bottom = 45.0
custom_fonts/font = ExtResource( 3 )
text = "SESI TANGGAL "

[node name="ColorRect" type="ColorRect" parent="VBoxContainer/TimeDetails/PseudoCard/MarginContainer/VBoxContainer"]
margin_top = 49.0
margin_right = 688.0
margin_bottom = 53.0
rect_min_size = Vector2( 672, 4 )

[node name="Pukul" type="Label" parent="VBoxContainer/TimeDetails/PseudoCard/MarginContainer/VBoxContainer"]
margin_top = 57.0
margin_right = 688.0
margin_bottom = 102.0
custom_fonts/font = ExtResource( 3 )
text = "SESI PUKUL "

[node name="StudDetails" parent="VBoxContainer" instance=ExtResource( 2 )]
editor/display_folded = true
anchor_right = 0.0
margin_top = 180.0
margin_right = 720.0
margin_bottom = 356.0

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/StudDetails/PseudoCard" index="1"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 16.0
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/StudDetails/PseudoCard/MarginContainer"]
margin_left = 8.0
margin_top = 8.0
margin_right = 696.0
margin_bottom = 136.0

[node name="Tanggal" type="Label" parent="VBoxContainer/StudDetails/PseudoCard/MarginContainer/VBoxContainer"]
margin_right = 688.0
margin_bottom = 45.0
custom_fonts/font = ExtResource( 3 )
text = "SESI TANGGAL "

[node name="ColorRect" type="ColorRect" parent="VBoxContainer/StudDetails/PseudoCard/MarginContainer/VBoxContainer"]
margin_top = 49.0
margin_right = 688.0
margin_bottom = 53.0
rect_min_size = Vector2( 672, 4 )

[node name="Pukul" type="Label" parent="VBoxContainer/StudDetails/PseudoCard/MarginContainer/VBoxContainer"]
margin_top = 57.0
margin_right = 688.0
margin_bottom = 102.0
custom_fonts/font = ExtResource( 3 )
text = "SESI PUKUL "

[node name="TeachDetails" parent="VBoxContainer" instance=ExtResource( 2 )]
editor/display_folded = true
anchor_right = 0.0
margin_top = 360.0
margin_right = 720.0
margin_bottom = 536.0

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/TeachDetails/PseudoCard" index="1"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 16.0
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/TeachDetails/PseudoCard/MarginContainer"]
margin_left = 8.0
margin_top = 8.0
margin_right = 696.0
margin_bottom = 136.0

[node name="Tanggal" type="Label" parent="VBoxContainer/TeachDetails/PseudoCard/MarginContainer/VBoxContainer"]
margin_right = 688.0
margin_bottom = 45.0
custom_fonts/font = ExtResource( 3 )
text = "SESI TANGGAL "

[node name="ColorRect" type="ColorRect" parent="VBoxContainer/TeachDetails/PseudoCard/MarginContainer/VBoxContainer"]
margin_top = 49.0
margin_right = 688.0
margin_bottom = 53.0
rect_min_size = Vector2( 672, 4 )

[node name="Pukul" type="Label" parent="VBoxContainer/TeachDetails/PseudoCard/MarginContainer/VBoxContainer"]
margin_top = 57.0
margin_right = 688.0
margin_bottom = 102.0
custom_fonts/font = ExtResource( 3 )
text = "SESI PUKUL "

[editable path="VBoxContainer/TimeDetails"]

[editable path="VBoxContainer/StudDetails"]

[editable path="VBoxContainer/TeachDetails"]
